--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
     "css-loader": "^0.19.0",
+    "eslint": "^1.5.1",
     "extract-text-webpack-plugin": "^0.8.2",
     "nib": "^1.1.0",
     "rupture": "^0.6.1",
