--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.19.0",
     "eslint": "^1.5.1",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "nib": "^1.1.0",
     "rupture": "^0.6.1",
     "style-loader": "^0.12.4",
