--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prewebpack": "rm -rf ./public/build/*",
     "webpack": "./node_modules/.bin/webpack",
+    "go": "rm -rf ./public/build/* | ./node_modules/.bin/webpack | node ./app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
